--- a/views/competition-awards.ejs
+++ b/views/competition-awards.ejs
@@ -16,13 +16,20 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
-          <h5 class="text-uppercase fw-bold text-center">
-            <span id="competitionName">
-              Raplamaa seeriavõistluse 7. etapp - Valtu auhindadele
-            </span>
+          <h5 class="text-uppercase fw-bold text-center mb-4">
+            <span id="competitionName"></span>
+            - Auhinnad
           </h5>
-          <h5 class="text-uppercase fw-bold text-center mb-4">Auhinnad</h5>
         </div>
+
+        <button
+          id="btnScrolToTop"
+          class="btn btn-secondary btnScrolToTop visually-hidden"
+          title="Lehekülje algusesse"
+        >
+          <i class="fas fa-chevron-up"></i>
+        </button>
+
         <!-- Üldvõitja, ehk I koht -->
         <div class="card-deck mb-5 text-center">
           <div class="card">
