--- a/views/competition-info.ejs
+++ b/views/competition-info.ejs
@@ -16,11 +16,9 @@
     <main role="main" class="flex-shrink-0">
       <div class="container py-4">
         <div>
-          <h5 class="text-uppercase fw-bold text-center">
-            <span id="compName"></span>
-          </h5>
           <h5 class="text-uppercase fw-bold text-center mb-4">
-            Võistluse info
+            <span id="compName"></span>
+            - Võistluse info
           </h5>
           <div class="container w-50">
             <p class="my-1">
