--- a/views/competition-instructions.ejs
+++ b/views/competition-instructions.ejs
@@ -9,6 +9,14 @@
 
     <main class="flex-shrink-0">
       <div class="container">
+        <button
+          id="btnScrolToTop"
+          class="btn btn-secondary btnScrolToTop visually-hidden"
+          title="Lehekülje algusesse"
+        >
+          <i class="fas fa-chevron-up"></i>
+        </button>
+
         <div>
           <h5 class="text-uppercase fw-bold text-center mb-3">
             V&otilde;istlusjuhend
@@ -22,10 +30,15 @@
           <p class="mb-0">
             Raplamaa seeriav&otilde;istluse etappidel saavad osaleda &uuml;ksnes
             vaktsineerimiskuuri l&auml;binud, COVID-19 haiguse l&auml;bi
-            p&otilde;denud v&otilde;i negatiivse testitulemusega inimesed.<br />Osalemiseks
-            saab kuni 48 tundi varem teha antigeeni kiirtesti v&otilde;i kuni 72
-            tundi varem PCR-testi. Testimistulemus peab olema negatiivne.<br />T&otilde;endeid
-            kontrollitakse enne registreerimist!<br />Kohapeal testida ei saa!
+            p&otilde;denud v&otilde;i negatiivse testitulemusega inimesed.
+            <br />
+            Osalemiseks saab kuni 48 tundi varem teha antigeeni kiirtesti
+            v&otilde;i kuni 72 tundi varem PCR-testi. Testimistulemus peab olema
+            negatiivne.
+            <br />
+            T&otilde;endeid kontrollitakse enne registreerimist!
+            <br />
+            Kohapeal testida ei saa!
           </p>
         </div>
         <p class="fw-bold mb-0">Eesm&auml;rk</p>
@@ -34,13 +47,17 @@
         <p>
           Seeriav&otilde;istlus koosneb seitsmest etapist (Kaiu, Alu, Rapla,
           M&auml;rjamaa, J&auml;rvakandi, Valtu, Kohila) millest arvesse
-          l&auml;hevad 6 parema etapi tulemused. <br />M&auml;ngitakse 2-miinuse
-          s&uuml;steemis koos k&otilde;ikide kohtade v&auml;ljam&auml;ngimisega.
-          Plussringi v&otilde;itjad saavutavad 1-2 koha. <br />Kohtumised
-          m&auml;ngitakse reeglina &quot;parem viiest&quot;.<br />Registreerunud
-          v&otilde;istlejad loositakse tabelisse viimase avaldatud reitingu
-          alusel. Juhul kui v&otilde;istlejatel puudub ELTL reiting,
-          m&auml;ngijad loositakse tabelisse.
+          l&auml;hevad 6 parema etapi tulemused.
+          <br />
+          M&auml;ngitakse 2-miinuse s&uuml;steemis koos k&otilde;ikide kohtade
+          v&auml;ljam&auml;ngimisega. Plussringi v&otilde;itjad saavutavad 1-2
+          koha.
+          <br />
+          Kohtumised m&auml;ngitakse reeglina &quot;parem viiest&quot;.
+          <br />
+          Registreerunud v&otilde;istlejad loositakse tabelisse viimase
+          avaldatud reitingu alusel. Juhul kui v&otilde;istlejatel puudub ELTL
+          reiting, m&auml;ngijad loositakse tabelisse.
         </p>
         <p class="fw-bold mb-0">
           V&otilde;isteldakse j&auml;rgmistes vanuseklassides
@@ -71,8 +88,10 @@
         <p>
           Iga etapi korraldaja autasustab k&otilde;ikide vanuseklasside 3
           paremat v&otilde;istlejat, lisaks 3 paremat mees-ja naism&auml;ngijat
-          olenemata vanusest. <br />V&otilde;istleja l&otilde;petab hooaja
-          selles vanuseklassis, milles ta ka alustas.
+          olenemata vanusest.
+          <br />
+          V&otilde;istleja l&otilde;petab hooaja selles vanuseklassis, milles ta
+          ka alustas.
         </p>
         <p class="fw-bold mb-0">Punktiarvestus</p>
         <ul>
@@ -119,10 +138,13 @@
         <p class="fw-bold mb-0">&Uuml;ldist</p>
         <p>
           V&otilde;isteldakse ELTL-i poolt kinnitatud
-          v&otilde;istlusm&auml;&auml;ruste j&auml;rgi.<br />Oma
-          osav&otilde;tuga seotud kulud katab iga osav&otilde;tja ise.<br />Oma
-          tervisliku seisundi eest vastutab iga osav&otilde;tja ise.<br />Kui
-          m&auml;ngija elab oma eba&otilde;nnestumise v&auml;lja korraldava
+          v&otilde;istlusm&auml;&auml;ruste j&auml;rgi.
+          <br />
+          Oma osav&otilde;tuga seotud kulud katab iga osav&otilde;tja ise.
+          <br />
+          Oma tervisliku seisundi eest vastutab iga osav&otilde;tja ise.
+          <br />
+          Kui m&auml;ngija elab oma eba&otilde;nnestumise v&auml;lja korraldava
           klubi inventari peal (laud, barj&auml;&auml;r, v&otilde;rk) ja tekitab
           eelnimetatud inventarile n&auml;htava kahju, siis on klubil
           &otilde;igus kahjustatud m&auml;ngu inventar kahju tekitanud
@@ -133,9 +155,10 @@
           Koos registreerumisega annab v&otilde;istleja n&otilde;usoleku
           v&otilde;istlusprotokollide avalikustamiseks, v&otilde;istlustulemuste
           ning fotode kajastamiseks sotsiaalmeedias ja meedias (ajakirjandus,
-          televisioon, raadio) , ning edetabeli koostamisel.<br />Korraldav
-          toimkond j&auml;tab endale &otilde;iguse vajadusel teha juhendis
-          muudatusi.
+          televisioon, raadio) , ning edetabeli koostamisel.
+          <br />
+          Korraldav toimkond j&auml;tab endale &otilde;iguse vajadusel teha
+          juhendis muudatusi.
         </p>
         <p class="my-5">&nbsp;</p>
       </div>
