--- a/views/competition-table.ejs
+++ b/views/competition-table.ejs
@@ -15,22 +15,20 @@
 
     <main role="main" class="flex-shrink-0 mt-3 mb-5">
       <div class="container-fluid">
-        <div class="py-3">
-          <h5 class="text-uppercase fw-bold text-center">
+        <div class="">
+          <h5 class="text-uppercase fw-bold text-center mb-3">
             <span id="competitionName"></span>
+            - Võistlustabel
           </h5>
-          <h5 class="text-uppercase fw-bold text-center fw-bold">
-            Võistlustabel
-          </h5>
-          <div class="text-center fw-bold mb-4">
-            <a class="text-reset text-underline-hover" href="#plussring">
-              Plussring
-            </a>
-            <a class="text-reset text-underline-hover" href="#miinusring">
-              Miinusring
-            </a>
-          </div>
         </div>
+
+        <button
+          id="btnScrolToTop"
+          class="btn btn-secondary btnScrolToTop visually-hidden"
+          title="Lehekülje algusesse"
+        >
+          <i class="fas fa-chevron-up"></i>
+        </button>
 
         <div class="container-fluid my-0">
           <h4 class="text-center fw-bold" id="plussring">Plussring</h4>
