--- a/views/competition-register.ejs
+++ b/views/competition-register.ejs
@@ -9,6 +9,14 @@
   <body class="d-flex flex-column h-100">
     <header><%- include('./partials/header'); %></header>
     <main id="main" role="main" class="flex-shrink-0 mt-3">
+      <button
+        id="btnScrolToTop"
+        class="btn btn-secondary btnScrolToTop visually-hidden"
+        title="Lehekülje algusesse"
+      >
+        <i class="fas fa-chevron-up"></i>
+      </button>
+
       <div class="container-fluid">
         <div class="mb-3 mt-5">
           <h5 class="text-uppercase fw-bold text-center">
