--- a/views/trainings.ejs
+++ b/views/trainings.ejs
@@ -9,6 +9,14 @@
 
     <main class="flex-shrink-0">
       <div class="container">
+        <button
+          id="btnScrolToTop"
+          class="btn btn-secondary btnScrolToTop visually-hidden"
+          title="Lehekülje algusesse"
+        >
+          <i class="fas fa-chevron-up"></i>
+        </button>
+
         <div>
           <h5 class="text-uppercase fw-bold text-center mb-5">Treeningud</h5>
         </div>
@@ -24,17 +32,19 @@
                   href="https://www.vesiroos.edu.ee/"
                   target="_blank"
                 >
-                  <h5>Rapla Vesiroosi Kool</h5> </a
-                ><i class="fas fa-map-marker-alt"></i>
+                  <h5>Rapla Vesiroosi Kool</h5>
+                </a>
+                <i class="fas fa-map-marker-alt"></i>
                 <a
                   class="text-underline-hover text-reset"
                   href="https://goo.gl/maps/TcoHCy7HRedaLStk6"
                   target="_blank"
-                  >Viljandi mnt 69, Rapla</a
                 >
+                  Viljandi mnt 69, Rapla
+                </a>
                 <p class="my-2">
-                  <i class="fas fa-address-book"></i> Kontakt Andres Sahkur
-                  andres.sahkur@vesiroos.edu.ee
+                  <i class="fas fa-address-book"></i>
+                  Kontakt Andres Sahkur andres.sahkur@vesiroos.edu.ee
                 </p>
               </div>
             </div>
@@ -54,24 +64,27 @@
                   href="https://www.valtuspordimaja.ee/"
                   target="_blank"
                 >
-                  <h5>Valtu Spordimaja</h5> </a
-                ><i class="fas fa-map-marker-alt"></i>
+                  <h5>Valtu Spordimaja</h5>
+                </a>
+                <i class="fas fa-map-marker-alt"></i>
                 <a
                   class="text-underline-hover text-reset"
                   href="https://goo.gl/maps/BNv1hrCTGgyXMCYh8"
                   target="_blank"
-                  >Saare 11, Kaerepere</a
                 >
+                  Saare 11, Kaerepere
+                </a>
                 <p class="my-2">
-                  <i class="fas fa-clock"></i> Treeningu aeg Esmaspäev kell
-                  19:00 - 21:00
+                  <i class="fas fa-clock"></i>
+                  Treeningu aeg Esmaspäev kell 19:00 - 21:00
                 </p>
                 <p class="mb-2">
-                  <i class="fas fa-euro-sign"></i> Tasu 3,5 EUR
+                  <i class="fas fa-euro-sign"></i>
+                  Tasu 3,5 EUR
                 </p>
                 <p class="mb-2">
-                  <i class="fas fa-address-book"></i> Kontakt Kalju Kalda 514
-                  8261 kalju.kalda@gmail.com
+                  <i class="fas fa-address-book"></i>
+                  Kontakt Kalju Kalda 514 8261 kalju.kalda@gmail.com
                 </p>
               </div>
             </div>
@@ -85,24 +98,27 @@
                   href="https://www.kohilasport.ee/"
                   target="_blank"
                 >
-                  <h5>Kohila Spordikompleks</h5> </a
-                ><i class="fas fa-map-marker-alt"></i>
+                  <h5>Kohila Spordikompleks</h5>
+                </a>
+                <i class="fas fa-map-marker-alt"></i>
                 <a
                   class="text-underline-hover text-reset"
                   href="https://goo.gl/maps/X7gPKDPyYiqUZyyq5"
                   target="_blank"
-                  >Kooli 1, Kohila</a
                 >
+                  Kooli 1, Kohila
+                </a>
                 <p class="my-2">
-                  <i class="fas fa-clock"></i> Treeningu aeg Neljapäev kell
-                  19:30 - 21:30
+                  <i class="fas fa-clock"></i>
+                  Treeningu aeg Neljapäev kell 19:30 - 21:30
                 </p>
                 <p class="mb-2">
-                  <i class="fas fa-euro-sign"></i> Tasu 2,50 EUR
+                  <i class="fas fa-euro-sign"></i>
+                  Tasu 2,50 EUR
                 </p>
                 <p class="mb-2">
-                  <i class="fas fa-address-book"></i> Kontakt Raigo Rommot 506
-                  6621 raigo.rommot@elasa.ee
+                  <i class="fas fa-address-book"></i>
+                  Kontakt Raigo Rommot 506 6621 raigo.rommot@elasa.ee
                 </p>
               </div>
             </div>
